using UnityEngine;

public class CharacterAnimatoins : MonoBehaviour
{
    public static readonly int IsWalk = Animator.StringToHash("IsWalk");
    public static readonly int IsAttack = Animator.StringToHash("IsAttack");
    public static readonly int IsWakeUp = Animator.StringToHash("IsWakeUp");
}
